Fixed the font-size and letter-spacing for page-title

--- a/css/style.css
+++ b/css/style.css
@@ -3687,9 +3687,9 @@ form#userChangeAddressCard {
     }
     
     .page-title h1 {
-        font-size: 13px;
+        font-size: 15px;
         margin: 10px 0 10px 0;
-        letter-spacing: 5px;
+        letter-spacing: 20px;
     }
 
     .container-artist .artist-image img {
